# G4TIP

./: .gitignore  1274level.mac  1274level_rdm.mac  3357cascade.mac  CMakeLists.txt  G4TIP.cc  GNUmakefile  Makefile  README.md  TIP_Fusion_Evaporation  TIP_Fusion_Evaporation.cc  multiple_runs.sh
current/: 0p2atest.mac  28Mg.mac  28Mgrun.mac  G4History.macro  GNUmakefile  README  SRIMcomp.mac  TIP_FEDSAM_TIGRESS_PINWall.cc  TIP_FusEvapDSAM_CsIWall.cc  TIP_Fusion_Evaporation.cc  christmas_break.sh  clean_directories.sh  ds_grid.sh  gamma_function_plot  multiple_runs.sh
current/gui/: G4History.macro  gui.mac
current/include/: CsI_array.hh  DetectionSystemGriffin.hh  DetectorConstruction.hh  EventAction.hh  EventAction_Messenger.hh  G4IonCustomStoppingData.hh  GammaDecayChannel.hh  Materials.hh  PhysicsList.hh  Projectile_Messenger.hh  Reaction.hh  Reaction_Messenger.hh  Results.hh  Results_Messenger.hh  RunAction.hh  TrackerCsIHit.hh  TrackerCsISD.hh  TrackerCsISD_Messenger.hh  TrackerIonHit.hh
current/src/: Chamber.cc  Chamber_Messenger.cc  CsI_array.cc  CsI_detector.cc  DetectionSystemGriffin.cc  DetectionSystemGriffinSuppressed.cc  DetectorConstruction.cc  EventAction.cc  EventAction_Messenger.cc  G4IonCustomModel.cc  G4IonCustomStoppingData.cc  G4NuclearDecayChannel.cc  Materials.cc  PhysicsList.cc  Projectile.cc  Projectile_Messenger.cc  Reaction.cc  Reaction_Messenger.cc  Recoil.cc  Recoil_Messenger.cc  Results.cc  Results.cc.old  Results_Messenger.cc  RunAction.cc  SteppingAction.cc  Target.cc  TrackerCsIHit.cc  TrackerCsISD.cc  TrackerIonHit.cc  TrackerIonSD.cc
include/: ArbitraryTarget.hh  ArbitraryTarget_Messenger.hh  Chamber.hh  Chamber_Messenger.hh  Common.hh  CsI_array.hh  CsI_array_spherical.hh  CsI_detector.hh  CsI_detector_spherical.hh  DetectionSystemGriffin.hh  DetectorConstruction.hh  DetectorConstruction_Messenger.hh  EventAction.hh  EventAction_Messenger.hh  Experimental_Hall.hh  Experimental_Hall_Messenger.hh  Flags.hh  G4IonCustomModel.hh  G4IonCustomModel.icc  G4IonParametrisedLossModel.hh  G4IonParametrisedLossModel.icc  G4IonStoppingData.hh  G4NuclearDecayChannel.hh  G4VIonDEDXTable.hh  GammaDecayChannel.hh  GriffinMessenger.hh  Materials.hh  PIN_array.hh  PIN_diode.hh  PhysicsList.hh  Plunger.hh  Plunger_Messenger.hh  PrimaryGeneratorAction.hh  Projectile.hh  Projectile_Messenger.hh  Reaction.hh  ReactionCoulex.hh  ReactionCoulex_Messenger.hh  ReactionFusEvap.hh  ReactionFusEvap_Messenger.hh  (+16 more)
macros/: 1274level.mac  1274level_fusevap_dsam.mac  1274level_fusevap_rdm.mac  3357cascade.mac  3357cascade_fusevap_dsam.mac  coulex_dsam_20Mg_Be_target_Au_stopper.mac  coulex_rdm_20Mg_Be_target_Au_stopper.mac  fusevap_dsam_1274level.mac  fusevap_dsam_3357cascade.mac  fusevap_dsam_3357cascade_arbtarget.mac  fusevap_rdm_1274level.mac  gammatrackingmap_lab.mac  vis.mac
old/ver1.0/: 28Mg.mac  TIP_FEDSAM_TIGRESS_PINWall.cc
old/ver1.0/gui/: G4History.macro  vis.mac  visOGLIX.mac
old/ver1.0/include/: Chamber.hh  EvaporationChannel.hh  EvaporationChannel_Messenger.hh  EventAction_Messenger.hh  Flags.hh  Materials.hh  PhysicsList.hh  Reaction.hh  Results.hh  Results_Messenger.hh  RunAction.hh  Target.hh  TrackerIonHit.hh  TrackerIonSD.hh
old/ver1.0/src/: Chamber_Messenger.cc  DetectionSystemGriffinSuppressed.cc  DetectorConstruction.cc  EvaporationChannel.cc  EvaporationChannel_Messenger.cc  Experimental_Hall_Messenger.cc  PIN_array.cc  PIN_diode.cc  PhysicsList.cc  Reaction.cc  Results_Messenger.cc  RunAction.cc  TrackerPINSD.cc  VisManager.cc
old/ver1.1/: 28Mgrun.mac  clean_directories.sh
old/ver1.1/gui/: G4History.macro  visVRML.mac
old/ver1.1/include/: Chamber_Messenger.hh  DetectorConstruction.hh  EventAction.hh  GriffinMessenger.hh  PhysicsList.hh  Reaction.hh  Reaction_Messenger.hh
old/ver1.1/src/: Chamber.cc  DetectionSystemGriffin.cc  EventAction.cc  EventAction_Messenger.cc  Experimental_Hall.cc  GriffinMessenger.cc  Materials.cc  Reaction.cc  Target.cc  TrackerIonHit.cc  TrackerIonSD.cc  TrackerPINSD.cc
src/: #DetectorConstruction_Messenger.cc#  ArbitraryTarget.cc  ArbitraryTarget_Messenger.cc  Chamber.cc  CsI_array.cc  CsI_array_spherical.cc  CsI_detector.cc  CsI_detector_spherical.cc  DetectionSystemGriffin.cc  DetectorConstruction.cc  DetectorConstruction_Messenger.cc  EventAction.cc  EventAction_Messenger.cc  Experimental_Hall.cc  G4Decay.cc  G4IonParametrisedLossModel.cc  G4IonStoppingData.cc  G4NuclearDecayChannel.cc  GammaDecayChannel.cc  GriffinMessenger.cc  Materials.cc  PhysicsList.cc  Plunger.cc  Plunger_Messenger.cc  PrimaryGeneratorAction.cc  Projectile.cc  Projectile_Messenger.cc  Reaction.cc  ReactionCoulex.cc  ReactionCoulex_Messenger.cc  ReactionFusEvap.cc  ReactionFusEvap_Messenger.cc  Reaction_Messenger.cc  Recoil_Messenger.cc  Results.cc  Results_Messenger.cc  RunAction.cc  Run_Messenger.cc  SFUIonStoppingData.cc  SteppingAction.cc  (+10 more)
